ansible/sample/lb-sample.yaml
apiVersion: v1
kind: Service
metadata:
  name: lb-sample
spec:
  ports:
    - port: 80
  selector: {}
  type: LoadBalancer
